tree-sitter-sofl/test/corpus/exp.txt
==================
Exp
==================

module ATM;

process hello()
pre { 1 -> 2 ,2 -> 3, 3 -> 4 }
post true
end_process;
---

(source_file
  (module_definition
    (identifier))
  (process_definition
    (process_definition_item
      (identifier)
      (process_body
        (map_expression
          (map_item
            (int)
            (int))
          (map_item
            (int)
            (int))
          (map_item
            (int)
            (int)))
        (bool)))))
