tree-sitter-sofl/test/corpus/module.txt
==================
Module
==================

module ATM;
type
    TA = int;
    TB = string;
    TC = {<A>, <B>, <C>};
    TD = set of TA;
    TE = list of TB;
    TF = composed of
      name: TB;
      props: TD;
      props1: int;
      props2: string;
    end;

var
    a: TA;
    b: set of TA;
    c: TC;
    d: list of TB;
    e: TE;
    f: {<A>, <B>, <C>};
---

(source_file
  (module_definition
    (identifier))
  (type_definition
    (type_definition_item
      (identifier)
      (primitive_type))
    (type_definition_item
      (identifier)
      (primitive_type))
    (type_definition_item
      (identifier)
      (enumeration_type
        (enumeration_value
          (identifier))
        (enumeration_value
          (identifier))
        (enumeration_value
          (identifier))))
    (type_definition_item
      (identifier)
      (set_type
        (type_identifier
          (identifier))))
    (type_definition_item
      (identifier)
      (list_type
        (type_identifier
          (identifier))))
    (type_definition_item
      (identifier)
      (composite_type
        (identifier)
        (type_identifier
          (identifier))
        (identifier)
        (type_identifier
          (identifier))
        (identifier)
        (primitive_type)
        (identifier)
        (primitive_type))))
  (variable_definition
    (variable_definition_item
      (identifier)
      (type_identifier
        (identifier)))
    (variable_definition_item
      (identifier)
      (set_type
        (type_identifier
          (identifier))))
    (variable_definition_item
      (identifier)
      (type_identifier
        (identifier)))
    (variable_definition_item
      (identifier)
      (list_type
        (type_identifier
          (identifier))))
    (variable_definition_item
      (identifier)
      (type_identifier
        (identifier)))
    (variable_definition_item
      (identifier)
      (enumeration_type
        (enumeration_value
          (identifier))
        (enumeration_value
          (identifier))
        (enumeration_value
          (identifier))))))
