tree-sitter-sofl/test/corpus/process.txt
==================
Process
==================

module ATM;

process hello(student: Student | a: A) grades: map nat to Grade
ext
  rd students: map string to Student
  rd teachers: map string to Teacher
pre true
post false
end_process;
---

(source_file
  (module_definition
    (identifier))
  (process_definition
    (process_definition_item
      (identifier)
      (parameter_list
        (parameter_item
          (identifier)
          (type_identifier
            (identifier)))
        (parameter_item
          (identifier)
          (type_identifier
            (identifier))))
      (parameter_list
        (parameter_item
          (identifier)
          (map_type
            (primitive_type)
            (type_identifier
              (identifier)))))
      (process_body
        (ext_item
          (identifier)
          (map_type
            (primitive_type)
            (type_identifier
              (identifier))))
        (ext_item
          (identifier)
          (map_type
            (primitive_type)
            (type_identifier
              (identifier))))
        (bool)
        (bool)))))
