tree-sitter-sofl/test/corpus/ref.txt
==================
Ref
==================

module ATM;

process hello(student: Student) grades: map nat to Grade
ext
  rd students: map string to Student
  rd teachers: map string to Teacher
pre student.a.b.c.d
post false
end_process;
---

(source_file
  (module_definition
    (identifier))
  (process_definition
    (process_definition_item
      (identifier)
      (parameter_list
        (parameter_item
          (identifier)
          (type_identifier
            (identifier))))
      (parameter_list
        (parameter_item
          (identifier)
          (map_type
            (primitive_type)
            (type_identifier
              (identifier)))))
      (process_body
        (ext_item
          (identifier)
          (map_type
            (primitive_type)
            (type_identifier
              (identifier))))
        (ext_item
          (identifier)
          (map_type
            (primitive_type)
            (type_identifier
              (identifier))))
        (reference_expression
          (reference_expression
            (reference_expression
              (reference_expression
                (reference_expression
                  (identifier))
                (identifier))
              (identifier))
            (identifier))
          (identifier))
        (bool)))))
